[gd_scene load_steps=12 format=3 uid="uid://cnqsep2p0ch6y"]

[ext_resource type="Script" uid="uid://bauutt2mjypdl" path="res://scenes/buildings/sailmaker.gd" id="1_t3opu"]
[ext_resource type="Texture2D" uid="uid://c07217j216ntx" path="res://assets/art/atlas/Sprites.png" id="2_jkcnl"]
[ext_resource type="Texture2D" uid="uid://ehbqgvofqqqr" path="res://assets/art/atlas/UI.png" id="3_2yjm3"]
[ext_resource type="FontFile" uid="uid://b475o4l7b5n10" path="res://assets/fonts/Pixellari.ttf" id="4_uskhe"]
[ext_resource type="Script" uid="uid://cbs343k5fqkh" path="res://scenes/buildings/res_label.gd" id="5_vlo47"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t3opu"]
atlas = ExtResource("2_jkcnl")
region = Rect2(704, 176, 96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8jy3"]
size = Vector2(92, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_rubx5"]
atlas = ExtResource("3_2yjm3")
region = Rect2(240, 0, 80, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xd1yv"]
texture = SubResource("AtlasTexture_rubx5")

[sub_resource type="AtlasTexture" id="AtlasTexture_w8jy3"]
atlas = ExtResource("3_2yjm3")
region = Rect2(320, 0, 80, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fb2vg"]
texture = SubResource("AtlasTexture_w8jy3")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 80, 16)

[node name="Sailmaker" type="StaticBody2D"]
script = ExtResource("1_t3opu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_t3opu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 17)
shape = SubResource("RectangleShape2D_w8jy3")

[node name="ProdBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -40.0
offset_top = -56.0
offset_right = 40.0
offset_bottom = -40.0
theme_override_styles/background = SubResource("StyleBoxTexture_xd1yv")
theme_override_styles/fill = SubResource("StyleBoxTexture_fb2vg")
show_percentage = false

[node name="ResLabel" type="RichTextLabel" parent="."]
z_index = 2
offset_left = -25.0
offset_top = -76.0
offset_right = 25.0
offset_bottom = -46.0
theme_override_fonts/normal_font = ExtResource("4_uskhe")
bbcode_enabled = true
text = "[img]res://assets/art/icons/IconSails.png[/img] +1"
horizontal_alignment = 1
script = ExtResource("5_vlo47")

[node name="Area2D" type="Area2D" parent="."]
y_sort_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 17)
shape = SubResource("RectangleShape2D_w8jy3")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
